dev-DEAL-327:  385 Fixed shifted content for step 5 [0.0.2]

--- a/Client/DealnetPortal.Web/Content/less/credit-check.less
+++ b/Client/DealnetPortal.Web/Content/less/credit-check.less
@@ -241,9 +241,13 @@ select.dealnet-disabled-input{
 
     }
     &:nth-child(even) {
-      padding-right: 0;
+      @media @desktop-up {
+        padding-right: 0;
+      }
       .dealnet-credit-check-section{
-        padding: 0 15% 0 0;
+        @media @desktop-up {
+          padding: 0 15% 0 0;
+        }
       }
     }
   }
